--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <body>
     <main class="container">
-        <h1 class="titleProject">Lista zadań</h1>
+        <header>
+            <h1 class="titleProject">Lista zadań</h1>
+        </header>
         <section class="section">
             <h2 class="section__header">Dodaj nowe zadanie</h2>
             <form class="form js-form">
@@ -30,9 +32,7 @@
         <section class="section">
             <div class="section__container">
                 <h2 class="section__header--list">Lista zadań</h2>
-                <div>
-                    <button class="section__button js-removeAll">Usuń wszystkie</button>
-                </div>
+                <button class="section__button js-removeAll">Usuń wszystkie</button>
             </div>
             <ul class="tasksList js-tasksList"></ul>
         </section>
