--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/section.css">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="css/tasks.css">
+    <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/@media.css">
     <script defer src="script.js"></script>
 </head>
@@ -23,17 +24,17 @@
             <h1 class="titleProject">Lista zadań</h1>
         </header>
         <section class="section">
-            <h2 class="section__header">Dodaj nowe zadanie</h2>
+            <h2 class="section__title">Dodaj nowe zadanie</h2>
             <form class="form js-form">
                 <input type="text" class="form__field js-newTask" placeholder="Co jest do zrobienia?" autofocus>
                 <button class="form__button js-addNewTask">Dodaj zadanie</button>
             </form>
         </section>
         <section class="section">
-            <div class="section__container">
-                <h2 class="section__header--list">Lista zadań</h2>
-                <button class="section__button js-removeAll">Usuń wszystkie</button>
-            </div>
+            <header class="section__header js-section__container">
+                <h2 class="section__title--list">Lista zadań</h2>
+                <div class="buttons js-buttons"></div>
+            </header>
             <ul class="tasksList js-tasksList"></ul>
         </section>
     </main>
