--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <section class="section">
             <h2 class="section__title">Dodaj nowe zadanie</h2>
             <form class="form js-form">
-                <input type="text" class="form__field js-newTask" placeholder="Co jest do zrobienia?" autofocus>
+                <input type="text" class="form__field js-newTask" placeholder="Co jest do zrobienia?">
                 <button class="form__button js-addNewTask">Dodaj zadanie</button>
             </form>
         </section>
         <section class="section">
             <header class="section__header js-section__container">
-                <h2 class="section__title--list">Lista zadań</h2>
+                <h2 class="section__title">Lista zadań</h2>
                 <div class="buttons js-buttons"></div>
             </header>
             <ul class="tasksList js-tasksList"></ul>
