changed name class section__title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <section class="section">
             <header class="section__header js-section__container">
-                <h2 class="section__title">Lista zadań</h2>
+                <h2 class="section__title--list">Lista zadań</h2>
                 <div class="buttons js-buttons"></div>
             </header>
             <ul class="tasksList js-tasksList"></ul>
